--- a/style.css
+++ b/style.css
@@ -1,4 +1,34 @@
+html {
+  background-color: black;
+  text-align: center;
+  font-family:verdana;
+}
+
 h1 {
-  font-family:georgia;
-  font-size:12px;
+  font-weight:normal;
+  color:white;
+  font-size:50px;
+  text-align:center;
+}
+
+h2 {
+  font-weight:300;
+  font-size:42px;
+  color:white;
+}
+
+h3 {
+  font-size: 21px;
+  color:gray;
+}
+
+p {
+  color:aquamarine;
+  font-size: 16px;
+  text-decoration: underline;
+}
+
+footer {
+  text-align: right;
+  color:gray;
 }
